tests/checker/diagnostics/0802_polyvar_call_wrong_tag_05.ml.infer.expected
File "0802_polyvar_call_wrong_tag_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0802_polyvar_call_wrong_tag_05 is not a valid module name.

File "0802_polyvar_call_wrong_tag_05.ml", line 5, characters 21-23:
5 | let _ = read_epsilon `C
                         ^^
Error: The constructor `C has type [> `C ]
       but an expression was expected of type [ `A | `B ]
       The second variant type does not allow tag(s) `C
