tests/checker/diagnostics/0802_polyvar_call_wrong_tag_05.ml
let read_epsilon : [ `A | `B ] -> int = function
  | `A -> 4
  | `B -> 5

let _ = read_epsilon `C
